--- a/catalog.html
+++ b/catalog.html
@@ -225,6 +225,8 @@
               </li>
             </ul>
 
+            <div class="devider"></div>
+
             <ul class="pagination-list">
               <li class="pagination-item">
                 <a class="pagination-link">1</a>
