--- a/catalog.html
+++ b/catalog.html
@@ -113,13 +113,21 @@
                   </fieldset>
                 </div>
                 <div class="hotel-filter-group-wrapper">
-                  <fieldset class="hotel-filter-group hotel-filter-group-price">
+                  <fieldset class="hotel-filter-group">
                     <legend class="hotel-filter-group-title">Стоимость, &#8381; :</legend>
-                    <div class="hotel-filter-price min-price">
-                      <span>0</span><span>от</span>
+                    <div class="hotel-filter-price-wrapper">
+                      <div class="hotel-filter-price min-price">
+                        <span>0</span><span>от</span>
+                      </div>
+                      <div class="hotel-filter-price max-price">
+                        <span>9000</span><span>до</span>
+                      </div>
                     </div>
-                    <div class="hotel-filter-price max-price">
-                      <span>9000</span><span>до</span>
+                    <div class="slider-filter">
+                      <div class="slider-1"></div>
+                      <div class="slider-2"></div>
+                      <div class="slider-line-1"></div>
+                      <div class="slider-line-2"></div>
                     </div>
                   </fieldset>
                   <div class="search-hotel-filter-buttons">
