--- a/catalog.html
+++ b/catalog.html
@@ -144,11 +144,13 @@
             <h2 class="visually-hidden">Результаты поиска</h2>
             <div class="sorting-wrapper">
               <p class="searching-results-quantity">Найдено гостиниц: 38</p>
-              <select class="select-control" aria-label="Сортировка">
-                <option class="select-control-option" value="cheap">Сначала дешевые</option>
-                <option class="select-control-option" value="expensive">Сначала дорогие</option>
-                <option class="select-control-option" value="popular">Сначала популярные</option>
-              </select>
+              <div class="select-control-wrapper">
+                <select class="select-control" aria-label="Сортировка">
+                  <option class="select-control-option" value="cheap">Сначала дешевые</option>
+                  <option class="select-control-option" value="expensive">Сначала дорогие</option>
+                  <option class="select-control-option" value="popular">Сначала популярные</option>
+                </select>
+              </div>
               <ul class="view-type-list">
                 <li class="view-type-item">
                   <p class="visually-hidden">Показать карточки</p>
