--- a/catalog.html
+++ b/catalog.html
@@ -68,22 +68,16 @@
                     <legend class="hotel-filter-group-title">Инфраструктура:</legend>
                     <ul class="hotel-filter-list">
                       <li class="hotel-filter-item">
-                        <label class="control">
-                          <input class="control-input" type="checkbox" name="pool" checked>
-                          Бассейн
-                        </label>
+                        <input class="control-input" type="checkbox" name="pool" id="pool" checked>
+                        <label class="control-checkbox" for="pool">Бассейн</label>
                       </li>
                       <li class="hotel-filter-item">
-                        <label class="control">
-                          <input class="control-input" type="checkbox" name="parking" checked>
-                          Парковка
-                        </label>
+                        <input class="control-input" type="checkbox" name="parking" id="parking" checked>
+                        <label class="control-checkbox" for="parking">Парковка</label>
                       </li>
                       <li class="hotel-filter-item">
-                        <label class="control">
-                          <input class="control-input" type="checkbox" name="wi-fi">
-                          Wi-Fi
-                        </label>
+                        <input class="control-input" type="checkbox" name="wi-fi" id="wi-fi">
+                        <label class="control-checkbox" for="wi-fi">Wi-Fi</label>
                       </li>
                     </ul>
                   </fieldset>
@@ -92,22 +86,16 @@
                     <legend class="hotel-filter-group-title">Тип жилья:</legend>
                     <ul class="hotel-filter-list">
                       <li class="hotel-filter-item">
-                        <label class="control">
-                          <input type="radio" name="housing-type" value="hotel" checked>
-                          Гостиница
-                        </label>
+                        <input class="control-input" type="radio" name="housing-type" value="hotel" id="hotel" checked>
+                        <label class="control-radio" for="hotel">Гостиница</label>
                       </li>
                       <li class="hotel-filter-item">
-                        <label class="control">
-                          <input type="radio" name="housing-type" value="motel">
-                          Мотель
-                        </label>
+                        <input class="control-input" type="radio" name="housing-type" value="motel" id="motel">
+                        <label class="control-radio" for="motel">Мотель</label>
                       </li>
                       <li class="hotel-filter-item">
-                        <label class="control">
-                          <input type="radio" name="housing-type" value="apartments">
-                          Апартаменты
-                        </label>
+                        <input class="control-input" type="radio" name="housing-type" value="apartments" id="apartments">
+                        <label class="control-radio" for="apartments">Апартаменты</label>
                       </li>
                     </ul>
                   </fieldset>
