--- a/catalog.html
+++ b/catalog.html
@@ -239,7 +239,7 @@
                 <a class="pagination-link" href="#">4</a>
               </li>
               <li class="pagination-item">
-                ...
+                <button class="pagination-button">...</button>
               </li>
               <li class="pagination-item">
                 <a class="pagination-link" href="#">10</a>
