--- a/catalog.html
+++ b/catalog.html
@@ -104,18 +104,12 @@
                   <fieldset class="hotel-filter-group">
                     <legend class="hotel-filter-group-title">Стоимость, &#8381; :</legend>
                     <div class="hotel-filter-price-wrapper">
-                      <!-- <div class="hotel-filter-price min-price"> -->
-                        <!-- <span>0</span><span>от</span> -->
-                        <div class="input-wrapper-min-price">
-                          <input class="hotel-filter-min-price" type="text">
+                        <div class="input-wrapper min-price">
+                          <input class="hotel-filter-price min" type="text">
                         </div>
-                        <div class="input-wrapper-max-price">
-                          <input class="hotel-filter-min-price" type="text">
+                        <div class="input-wrapper max-price">
+                          <input class="hotel-filter-price max" type="text">
                         </div>
-                      <!-- </div> -->
-                      <!-- <div class="hotel-filter-price max-price">
-                        <span>9000</span><span>до</span>
-                      </div> -->
                     </div>
                     <div class="slider-filter">
                       <div class="slider-1"></div>
