--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
             <li class="navigation-user-list-item">
               <a class="navigation-link" href="#">
                 <p class="visually-hidden">Поиск</p>
-                <img src="images/header/icon-search.svg" width="18" height="18" alt="лупа">
+                <img src="images/header/icon-search.svg" width="19" height="19" alt="лупа">
               </a>
             </li>
             <li class="navigation-user-list-item">
@@ -142,20 +142,20 @@
               <ul class="view-type-list">
                 <li class="view-type-item">
                   <p class="visually-hidden">Показать карточки</p>
-                  <a class="sorting-button cards" href="#">
-                    <img src="images/view/view-1.svg" width="16" height="14" alt="">
-                  </a>
+                  <a class="sorting-button active-view" href="#">
+                      <img src="images/view/view-1.svg" width="16" height="14" alt="вид: карточки.">
+                    </a>
                 </li>
                 <li class="view-type-item">
                   <p class="visually-hidden">Показать слайды</p>
-                  <a class="sorting-button slides" href="#">
-                    <img src="images/view/view-2.svg" width="16" height="14" alt="">
+                  <a class="sorting-button" href="#">
+                    <img src="images/view/view-2.svg" width="16" height="14" alt="вид: слайды.">
                   </a>
                 </li>
                 <li class="view-type-item">
                   <p class="visually-hidden">Показать список</p>
-                  <a class="sorting-button list" href="#">
-                    <img src="images/view/view-3.svg" width="16" height="14" alt="">
+                  <a class="sorting-button" href="#">
+                    <img src="images/view/view-3.svg" width="16" height="14" alt="вид: список.">
                   </a>
                 </li>
               </ul>
