--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
-            <li class="navigation-list-item navigation-list-curent-item">
-              <a class="navigation-link" href="index.html">Главная</a>
+            <li class="navigation-list-item">
+              <a class="navigation-link navigation-list-curent-item" href="index.html">Главная</a>
             </li>
             <li class="navigation-list-item">
               <a class="navigation-link" href="#">О Седоне</a>
@@ -27,20 +27,20 @@
           </ul>
           <ul class="navigation-user-list">
             <li class="navigation-user-list-item">
-              <a class="navigation-link" href="#">
+              <a class="navigation-user-link" href="#">
                 <p class="visually-hidden">Поиск</p>
-                <img src="images/header/icon-search.svg" width="18" height="18" alt="лупа">
+                <img src="images/header/icon-search.svg" width="19" height="19" alt="лупа">
               </a>
             </li>
             <li class="navigation-user-list-item">
-              <a class="navigation-link" href="#">
+              <a class="navigation-user-link" href="#">
                 <p class="visually-hidden">Избранное</p>
                 <img src="images/header/icon-heart.svg" width="18" height="17" alt="сердце">
                 <span class="favorites-number">12</span>
               </a>
             </li>
             <li class="navigation-user-list-item">
-              <a class="navigation-link navigation-link-button button" href="#">Хочу сюда!</a>
+              <a class="navigation-user-link navigation-link-button button" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
@@ -99,28 +99,37 @@
         </section>
         <section class="recomendations">
           <h2 class="visually-hidden">Рекомендации</h2>
-          <p class="recomendations-first-p">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+          <p class="recomendations-first-p">Приезжайте в Седону отдохнуть<br>в комфорте и уюте!</p>
           <p class="recomendations-second-p">Опытный персонал и качественное обслуживание!</p>
           <ul class="recomendations-list">
             <li class="recomendations-list-item">
               <div class="recomendations-list-item-wrapper">
                 <img class="recomendations-list-item-img" src="images/house.svg" width="75" height="72" alt="дом">
                 <h3>Жильё</h3>
-                <p>Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
+                <p>
+                  Рекомендуем пожить<br>
+                  в настоящем мотеле,<br>
+                  всё как в кино!
+                </p>
               </div>
             </li>
             <li class="recomendations-list-item">
               <div class="recomendations-list-item-wrapper">
-                <img class="recomendations-list-item-img" src="images/food.svg" width="74" height="70" alt="бургер">
+                <img class="recomendations-list-item-img" src="images/food.svg" width="75" height="72" alt="бургер">
                 <h3>Еда</h3>
-                <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                <p>
+                  Всегда заказывайте<br>
+                  топовый фирменный бургер, вы не разочаруетесь!</p>
               </div>
             </li>
             <li class="recomendations-list-item">
               <div class="recomendations-list-item-wrapper">
-                <img class="recomendations-list-item-img" src="images/gift.svg" width="64" height="76" alt="подарок">
+                <img class="recomendations-list-item-img" src="images/gift.svg" width="75" height="72" alt="подарок">
                 <h3>Сувениры</h3>
-                <p>Не только китайского, но и настоящего местного производства!</p>
+                <p>
+                  Не только китайского,<br>
+                  но и настоящего местного производства!
+                </p>
               </div>
             </li>
           </ul>
