--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона каталог</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
@@ -21,26 +21,26 @@
             <li class="navigation-list-item">
               <a class="navigation-link" href="#">О Седоне</a>
             </li>
-            <li class="navigation-list-item navigation-list-curent-item">
-              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            <li class="navigation-list-item">
+              <a class="navigation-link navigation-list-curent-item" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-user-list">
             <li class="navigation-user-list-item">
-              <a class="navigation-link" href="#">
+              <a class="navigation-user-link" href="#">
                 <p class="visually-hidden">Поиск</p>
                 <img src="images/header/icon-search.svg" width="19" height="19" alt="лупа">
               </a>
             </li>
             <li class="navigation-user-list-item">
-              <a class="navigation-link" href="#">
+              <a class="navigation-user-link" href="#">
                 <p class="visually-hidden">Избранное</p>
                 <img src="images/header/icon-heart.svg" width="18" height="17" alt="сердце">
                 <span class="favorites-number">12</span>
               </a>
             </li>
             <li class="navigation-user-list-item">
-              <a class="navigation-link navigation-link-button button" href="#">Хочу сюда!</a>
+              <a class="navigation-user-link navigation-link-button button" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="hotel-filter-group-wrapper">
                   <fieldset class="hotel-filter-group">
-                    <legend class="hotel-filter-group-title">Стоимость, &#8381; :</legend>
+                    <legend class="hotel-filter-group-title">Стоимость, &#8381;:</legend>
                     <div class="hotel-filter-price-wrapper">
                         <div class="input-wrapper min-price">
                           <input class="hotel-filter-price min" type="text">
@@ -168,13 +168,13 @@
                 <a class="hotel-card-link" href="#">
                   <h3 class="hotel-card-title">Amara Resort & Spa</h3>
                 </a>
-                <p class="hotel-type">Гостиница</p>
-                <p class="hotel-price">От 4000 &#8381;</p>
+                <span class="hotel-type">Гостиница</span>
+                <span class="hotel-price">От 4000 &#8381;</span>
                 <a class="hotel-information button" href="#">Подробнее</a>
                 <button class="button add-to-favorites" type="button">В избранное</button>
-                <span class="rating-stars"></span>
-                <p class="visually-hidden">4 из 5</p>
-                <p class="rating">Рейтинг: 8,5</p>
+                <span class="rating-stars four-stars"></span>
+                <span class="visually-hidden">4 из 5</span>
+                <span class="rating">Рейтинг: 8,5</span>
               </li>
 
               <li class="hotel-card">
@@ -184,12 +184,13 @@
                 <a class="hotel-card-link" href="#">
                   <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
                 </a>
-                <p class="hotel-type">Гостиница</p>
-                <p class="hotel-price">От 5000 &#8381;</p>
+                <span class="hotel-type">Гостиница</span>
+                <span class="hotel-price">От 5000 &#8381;</span>
                 <a class="hotel-information button" href="#">Подробнее</a>
                 <button class="button added-to-favorites" type="button">В избранном</button>
-                <p class="raiting-stars visually-hidden">4 из 5</p>
-                <p class="rating">Рейтинг: 9,2</p>
+                <span class="rating-stars four-stars"></span>
+                <span class="visually-hidden">4 из 5</span>
+                <spanp class="rating">Рейтинг: 9,2</spanp>
               </li>
 
               <li class="hotel-card">
@@ -199,12 +200,13 @@
                 <a class="hotel-card-link" href="#">
                   <h3 class="hotel-card-title">Desert Quail Inn</h3>
                 </a>
-                <p class="hotel-type">Гостиница</p>
-                <p class="hotel-price">От 2500 &#8381;</p>
+                <span class="hotel-type">Гостиница</span>
+                <span class="hotel-price">От 2500 &#8381;</span>
                 <a class="hotel-information button" href="#">Подробнее</a>
                 <button class="button add-to-favorites" type="button">В избранное</button>
-                <p class="raiting-stars visually-hidden">3 из 5</p>
-                <p class="rating">Рейтинг: 6,9</p>
+                <span class="rating-stars three-stars"></span>
+                <span class="visually-hidden">3 из 5</span>
+                <span class="rating">Рейтинг: 6,9</span>
               </li>
 
               <li class="hotel-card">
@@ -214,12 +216,13 @@
                 <a class="hotel-card-link" href="#">
                   <h3 class="hotel-card-title">GreenTree Inn</h3>
                 </a>
-                <p class="hotel-type">Гостиница</p>
-                <p class="hotel-price">От 1500 &#8381;</p>
+                <span class="hotel-type">Гостиница</span>
+                <span class="hotel-price">От 1500 &#8381;</span>
                 <a class="hotel-information button" href="#">Подробнее</a>
                 <button class="button add-to-favorites" type="button">В избранное</button>
-                <p class="raiting-stars visually-hidden">2 из 5</p>
-                <p class="rating">Рейтинг: 5,0</p>
+                <span class="rating-stars two-stars"></span>
+                <spanp class="raiting-stars visually-hidden">2 из 5</spanp>
+                <span class="rating">Рейтинг: 5,0</span>
               </li>
             </ul>
 
@@ -265,17 +268,17 @@
               <h3 class="visually-hidden">Социальные сети</h3>
               <ul class="social-list">
                 <li class="social-list-item">
-                  <a class="social-button" href="https://vk.com/htmlacademy">
+                  <a class="social-link" href="https://vk.com/htmlacademy">
                     <img src="images/social/vk.svg" width="24" height="14" alt="VK.">
                   </a>
                 </li>
                 <li class="social-list-item">
-                  <a class="social-button" href="https://t.me/htmlacademy">
+                  <a class="social-link" href="https://t.me/htmlacademy">
                     <img src="images/social/telegram.svg" width="18" height="15" alt="Telegram.">
                   </a>
                 </li>
                 <li class="social-list-item">
-                  <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
+                  <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
                     <img src="images/social/youtube.svg" width="22" height="17" alt="Youtube.">
                   </a>
                 </li>
