--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
             </li>
           </ul>
         </section>
-        <section class="search-hotel">
+        <section class="find-hotel">
           <h2 class="visually-hidden">Поиск отеля</h2>
-          <p class="search-hotel-first-p">Заинтересовались?</p>
-          <p class="search-hotel-second-p">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <button class="button search-button">Поиск гостиницы в Седоне</button>
+          <p class="find-hotel-first-p">Заинтересовались?</p>
+          <p class="find-hotel-second-p">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <button class="button find-button">Поиск гостиницы в Седоне</button>
         </section>
         <section class="mailing mailing-index">
           <h2 class="visually-hidden">Подписка</h2>
           <p class="mailing-first-p">Подпишитесь на рассылку</p>
           <p class="mailing-second-p">Только полезная информация и никакого спама, честное бойскаутское!</p>
-          <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
+          <form class="mailing-list mailing-list-index" action="https://echo.htmlacademy.ru/" method="post">
             <input type="email" name="email" id="email" placeholder="Ваш e-mail" required>
             <button class="button mailing-button" type="submit">Подписаться</button>
           </form>
