--- a/catalog.html
+++ b/catalog.html
@@ -105,10 +105,10 @@
                     <legend class="hotel-filter-group-title">Стоимость, &#8381;:</legend>
                     <div class="hotel-filter-price-wrapper">
                         <div class="input-wrapper min-price">
-                          <input class="hotel-filter-price min" type="text">
+                          <input class="hotel-filter-price min" type="text" value="0">
                         </div>
                         <div class="input-wrapper max-price">
-                          <input class="hotel-filter-price max" type="text">
+                          <input class="hotel-filter-price max" type="text" value="9000">
                         </div>
                     </div>
                     <div class="slider-filter">
