--- a/index.html
+++ b/index.html
@@ -211,17 +211,23 @@
                 <li class="hotel-guests-item">
                   <label for="">Взрослые:</label>
                   <div class="hotel-guests-item-wrapper">
-                    <button type="button">-</button>
-                    <input class="guests" type="text">
-                    <button type="button">+</button>
+                    <button class="minus" type="button"></button>
+                    <input class="guests" type="text" value="2">
+                    <button class="plus" type="button"></button>
                   </div>
                 </li>
                 <li class="hotel-guests-item">
-                  <label for="">Дети:</label>
+                  <div class="label-wrapper">
+                    <label for="">Дети:</label>
+                    <div class="info">
+                      <div class="info-icon-top"></div>
+                      <div class="info-icon-bottom"></div>
+                    </div>
+                  </div>
                   <div class="hotel-guests-item-wrapper">
-                    <button type="button">-</button>
-                    <input class="guests" type="text">
-                    <button type="button">+</button>
+                    <button class="minus" type="button"></button>
+                    <input class="guests" type="text" value="2">
+                    <button class="plus" type="button"></button>
                   </div>
                 </li>
               </ul>
