--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="page-container">
-      <header class="main-header">
+      <header class="main-header" data-test="header">
         <a class="main-logo-link" href="index.html">
           <img class="main-logo" src="images/header/logo.svg" width="140" height="70" alt="Логотип Седона.">
         </a>
@@ -46,7 +46,7 @@
         </nav>
       </header>
 
-      <main class="main-catalog">
+      <main class="main-catalog" data-test="main">
         <div class="search-container">
           <div class="content-wrapper">
             <header class="main-inner-header">
@@ -60,12 +60,13 @@
                 </li>
               </ul>
             </header>
-            <section class="search-hotel">
+            <section class="search-hotel" data-test="filter">
               <h2 class="visually-hidden">Параметры поиска отеля</h2>
               <form class="search-hotel-filter" action="https://echo.htmlacademy.ru/" method="post">
                 <div class="hotel-filter-group-wrapper">
                   <fieldset class="hotel-filter-group">
                     <legend class="hotel-filter-group-title">Инфраструктура:</legend>
+                      <!-- appearence: none  убирает элемент перед checkbox и потом его можно стилизовать-->
                     <ul class="hotel-filter-list">
                       <li class="hotel-filter-item">
                         <input class="control-input" type="checkbox" name="pool" id="pool" checked>
@@ -128,7 +129,7 @@
           </div>
         </div>
         <div class="content-wrapper">
-          <section class="searching-results">
+          <section class="searching-results" data-test="catalog">
             <h2 class="visually-hidden">Результаты поиска</h2>
             <div class="sorting-wrapper">
               <p class="searching-results-quantity">Найдено гостиниц: 38</p>
@@ -250,7 +251,7 @@
             </ul>
           </section>
         </div>
-        <section class="mailing">
+        <section class="mailing" data-test="subscribe">
           <h2 class="visually-hidden">Подписка</h2>
           <p class="mailing-first-p">Подпишитесь на рассылку</p>
           <p class="mailing-second-p">Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -261,7 +262,7 @@
         </section>
       </main>
 
-      <footer class="main-footer">
+      <footer class="main-footer" data-test="footer">
           <section class="contacts">
             <h2 class="visually-hidden">Контакты</h2>
             <div class="social">
