--- a/index.html
+++ b/index.html
@@ -199,34 +199,43 @@
               <legend class="visually-hidden">Параметры поиска гостиниц</legend>
               <ul class="arrival-departure-list">
                 <li class="arrival-departure-item">
-                  <label for="in">Дата заезда:</label>
+                  <label class="modal-form-input-label " for="in">Дата заезда:</label>
                   <input class="arrival-departure" type="text" id="in" value="27 апреля 2020">
+                  <span class="error-message error">Мы не можем отправить вас в прошлое.</span>
                 </li>
                 <li class="arrival-departure-item">
-                  <label for="out">Дата выезда:</label>
+                  <label class="modal-form-input-label" for="out">Дата выезда:</label>
                   <input class="arrival-departure" type="text" id="out" value="1 сентября 2021">
+                  <span class="error-message">На эти даты есть свободные номера. Пока есть.</span>
                 </li>
               </ul>
               <ul class="hotel-guests-list">
                 <li class="hotel-guests-item">
-                  <label for="">Взрослые:</label>
+                  <label class="modal-form-input-label" for="adult">Взрослые:</label>
                   <div class="hotel-guests-item-wrapper">
                     <button class="hotel-guests-item-button minus" type="button"></button>
-                    <input class="guests" type="text" value="2">
+                    <input class="guests" type="text" id="adult" value="2">
                     <button class="hotel-guests-item-button plus" type="button"></button>
                   </div>
                 </li>
                 <li class="hotel-guests-item">
                   <div class="label-wrapper">
-                    <label for="">Дети:</label>
-                    <div class="info">
-                      <div class="info-icon-top"></div>
-                      <div class="info-icon-bottom"></div>
-                    </div>
+                    <label class="modal-form-input-label" for="child">Дети:</label>
+                    <span class="tooltip">
+                      <button class="tooltip-toggle" type="button">
+                        <div class="info">
+                          <div class="info-icon-top"></div>
+                          <div class="info-icon-bottom"></div>
+                        </div>
+                      </button>
+                      <span class="tooltip-text">
+                        Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
+                      </span>
+                    </span>
                   </div>
                   <div class="hotel-guests-item-wrapper">
                     <button class="hotel-guests-item-button minus" type="button"></button>
-                    <input class="guests" type="text" value="2">
+                    <input class="guests" type="text" id="child" value="2">
                     <button class="hotel-guests-item-button plus" type="button"></button>
                   </div>
                 </li>
