--- a/modal.html
+++ b/modal.html
@@ -187,8 +187,8 @@
         </section>
       </footer>
     </div>
-    <div class="modal-container modal-container-close">
-      <div class="modal modal-autorization">
+    <div class="modal-container">
+      <div class="modal modal-autorization" data-test="modal">
         <button class="modal-close-button">
           <span class="visually-hidden">Закрыть</span>
         </button>
