--- a/catalog.html
+++ b/catalog.html
@@ -191,7 +191,7 @@
                 <button class="button added-to-favorites" type="button">В избранном</button>
                 <span class="rating-stars four-stars"></span>
                 <span class="visually-hidden">4 из 5</span>
-                <spanp class="rating">Рейтинг: 9,2</spanp>
+                <span class="rating">Рейтинг: 9,2</span>
               </li>
 
               <li class="hotel-card">
