--- a/modal.html
+++ b/modal.html
@@ -46,7 +46,7 @@
         </nav>
       </header>
 
-      <main class="main-index" data-test="main">
+      <main class="main-index main" data-test="main">
         <h1 class="visually-hidden">Курорт "Седона"</h1>
         <section class="welcome" data-test="hero">
           <h2 class="visually-hidden">Добро пожаловать</h2>
